# TxVeto

./: .gitignore  CHANGELOG.md  LAUNCH_POSTS.md  README.md  RELEASE_CHECKLIST.md  index.html  netlify.toml  playground.html  pyproject.toml  robots.txt  sitemap.xml
assets/images/: site.webmanifest
assets/scripts/: playground.js  theme.js
assets/styles/: site.css
netlify/functions/: simulate.js
onchain/: README.md  foundry.toml
onchain/broadcast/DeployTxVeto.s.sol/84532/: run-latest.json
onchain/cache/: solidity-files-cache.json
onchain/cache/DeployTxVeto.s.sol/84532/: run-1781043664511.json
onchain/contracts/: TxVetoAARouterAdapter.sol  TxVetoSessionPolicy.sol
onchain/deployments/: latest.json
onchain/indexer/: .env.example  .env.local  EVENTS.md  global.d.ts  package-lock.json  package.json  ponder.config.ts  ponder.schema.ts  tsconfig.json
onchain/indexer/.ponder/pglite/: postmaster.pid
onchain/indexer/.ponder/pglite/global/: 1260  pg_control
onchain/indexer/.ponder/pglite/pg_subtrans/: 0000
onchain/indexer/.ponder/pglite/pg_wal/: 00000001000000000000000B  00000001000000000000000C  00000001000000000000000D  00000001000000000000000E  00000001000000000000000F
onchain/indexer/scripts/: sync-policy-address.mjs
onchain/indexer/src/: index.ts
onchain/script/: DeployTxVeto.s.sol
onchain/test/: TxVetoSessionPolicy.t.sol
tests/: test_mcp_server.py  test_policy_and_demo.py  test_runaway_agent.py  test_web_demo.py
txveto/: __init__.py  demo.py  errors.py  guard.py  mcp_server.py  policy.py  scenarios.py  web_demo.py
(+106 files in other folders)
